# upmix-rt

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md
cmake/: CompilerWarnings.cmake
plugin/: CMakeLists.txt
plugin/include/UpmixRT/: AmbisonicDecoder.h  AmbisonicEncoder.h  AnalysisBand.h  Constants.h  Decorrelator.h  FilterBank.h  HeightEstimator.h  OutputWriter.h  PluginEditor.h  PluginProcessor.h  SpatialAnalyzer.h  SpeakerLayout.h
plugin/source/: AmbisonicDecoder.cpp  AmbisonicEncoder.cpp  AnalysisBand.cpp  Decorrelator.cpp  FilterBank.cpp  HeightEstimator.cpp  OutputWriter.cpp  PluginEditor.cpp  PluginProcessor.cpp  SpatialAnalyzer.cpp
scripts/: install-plugins.sh
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
